# lmsyz_genai_ie_rfs

./: .env.example  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
concepts/architecture/: index.html
concepts/prompts-and-schemas/: index.html
concepts/results-db/: index.html
data/: glassdoor_culture_2000.csv
docs/: index.md
docs/concepts/: architecture.md  prompts-and-schemas.md  results-db.md
docs/explanation/: design-decisions.md
docs/how-to/: batch-jobs.md  change-prompt-safely.md  inspect-results-db.md  resume-after-crash.md  switch-providers.md  troubleshooting.md
docs/reference/: batch-extractors.md  draft_prompt.md  extract_df.md  settings.md  sqlite-cache.md
examples/: news_extraction_schema.json
explanation/design-decisions/: index.html
how-to/batch-jobs/: index.html
how-to/change-prompt-safely/: index.html
how-to/inspect-results-db/: index.html
how-to/resume-after-crash/: index.html
how-to/switch-providers/: index.html
how-to/troubleshooting/: index.html
notebooks/: 00_colab_quickstart.ipynb  00_colab_quickstart.py  01_quickstart.ipynb  01_quickstart.py
reference/batch-extractors/: index.html
reference/draft_prompt/: index.html
reference/extract_df/: index.html
reference/settings/: index.html
reference/sqlite-cache/: index.html
search/: search_index.json
src/genai_batch_ie_rfs/: __init__.py  batch.py  client.py  dataframe.py  schema.py  settings.py
src/lmsyz_genai_ie_rfs/: __init__.py  anthropic_batch.py  batch.py  client.py  dataframe.py  draft_prompt.py  retry.py  settings.py
stylesheets/: extra.css
tests/: conftest.py  test_batch.py  test_cache.py  test_dataframe.py  test_live_api.py  test_schema.py
tests/data/: culture_batch_schema.json  culture_extraction_prompt.txt  culture_relation_prompt.txt  culture_segments_20.csv
