[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmsyz_genai_ie_rfs"
version = "0.1.0a3"
description = "Concurrent and batch LLM calls on a pandas DataFrame with Pydantic-typed outputs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Feng Mai", email = "feng-mai@uiowa.edu" },
]
keywords = ["llm", "openai", "anthropic", "pandas", "information-extraction", "batch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.54,<2",
    "anthropic>=0.39,<1",
    "pandas>=2,<3",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2,<3",
    "tenacity>=9,<10",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "vcrpy>=6",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupytext>=1.16",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.26,<1",
    "mkdocs-include-markdown-plugin>=7,<8",
    "pymdown-extensions>=10",
    "pygments>=2.15,<2.20",
]

[project.urls]
Paper = "https://doi.org/10.1093/rfs/hhaf081"
Repository = "https://github.com/maifeng/lmsyz_genai_ie_rfs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lmsyz_genai_ie_rfs" = ["prompts/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "live: tests that call real LLM APIs. Require OPENAI_API_KEY or ANTHROPIC_API_KEY. Skipped by default.",
    "slow: tests that may take several minutes (batch API polling). Skipped by default with '-m \"not slow\"'.",
]
